crates/vize_croquis/src/virtual_ts/snapshots/vize_croquis__virtual_ts__tests__snapshot_script_setup_output.snap
---
source: crates/vize_croquis/src/virtual_ts/mod.rs
expression: output.content
---
// Virtual TypeScript for Vue SFC type checking
// Generated by vize_croquis

type $Vue = import('vue');

// Module-level imports
import { ref, computed } from 'vue'

// Setup scope (function)
function __setup() {
  // Compiler macros (setup-scope only, actual functions not declare)
  function defineProps<T>(): T { return undefined as unknown as T; }
  function defineEmits<T>(): T { return undefined as unknown as T; }
  function defineExpose<T>(exposed?: T): void { }
  function defineOptions<T>(options: T): void { }
  function defineSlots<T>(): T { return undefined as unknown as T; }
  function defineModel<T>(name?: string, options?: { required?: boolean, default?: T }): $Vue['ModelRef']<T> { return undefined as unknown as $Vue['ModelRef']<T>; }
  function withDefaults<T, D extends Partial<T>>(props: T, defaults: D): T & D { return undefined as unknown as T & D; }
  const $event: Event = undefined as unknown as Event;
  function useTemplateRef<T extends Element | $Vue['ComponentPublicInstance'] = Element>(key: string): $Vue['ShallowRef']<T | null> { return undefined as unknown as $Vue['ShallowRef']<T | null>; }
  type __Props = <{
  title: string
  count?: number
}>;
  type __Emits = <{
  (e: 'update', value: number): void
  (e: 'close'): void
}>;
  
  // User setup code
  
  
  const props = defineProps<{
    title: string
    count?: number
  }>()
  
  const emit = defineEmits<{
    (e: 'update', value: number): void
    (e: 'close'): void
  }>()
  
  const localCount = ref(props.count ?? 0)
  const doubled = computed(() => localCount.value * 2)
  
  function increment() {
    localCount.value++
    emit('update', localCount.value)
  }
}

// Invoke setup
__setup();
